--- a/css/cv.css
+++ b/css/cv.css
@@ -31,7 +31,7 @@ h3 {
     font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-p {
+li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
