--- a/css/cv.css
+++ b/css/cv.css
@@ -24,14 +24,14 @@ h1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 h2 {
-    font-size: 2.5em;
+    font-size: 2.3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 h3 {
-    font-size: 2em;
+    font-size: 1.8em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-li {
+h3 li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
