--- a/css/cv.css
+++ b/css/cv.css
@@ -23,20 +23,20 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h2 {
+h1 h2 {
     font-size: 2.3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h3 {
+h1 h2 h3 {
     font-size: 1.8em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h2 li {
+h1 h2 li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
 }
-h3 li {
+h1 h2 h3 li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
