--- a/css/cv.css
+++ b/css/cv.css
@@ -20,23 +20,18 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
+    font-size: 5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h1 h2 {
+h2 {
     font-size: 2.3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h1 h2 h3 {
+h3 {
     font-size: 1.8em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h1 h2 li {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-h1 h2 h3 li {
+ul li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
