--- a/css/cv.css
+++ b/css/cv.css
@@ -28,10 +28,15 @@ h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 h3 {
-    font-size: 1.8em;
+    font-size: 4em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 ul li {
+    font-size: 1.5em;
+    line-height: 1.4em;
+    color: #333;
+}
+h2 ul li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
