--- a/css/cv.css
+++ b/css/cv.css
@@ -23,12 +23,12 @@ h1 {
     font-size: 5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h2 {
+h1 h2 {
     font-size: 2.3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h3 {
-    font-size: 4em;
+h1 h2 h3 {
+    font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 ul li {
@@ -36,7 +36,7 @@ ul li {
     line-height: 1.4em;
     color: #333;
 }
-h2 ul li {
+.SkillsList li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
