--- a/css/cv.css
+++ b/css/cv.css
@@ -24,11 +24,11 @@ h1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 h1 h2 {
-    font-size: 3em;
+    font-size: 4em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 h1 h2 h3 {
-    font-size: 2em;
+    font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 ul li {
@@ -36,7 +36,7 @@ ul li {
     line-height: 1.4em;
     color: #333;
 }
-.SkillsList ul li {
+.SkillsList h2 ul li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
