--- a/css/cv.css
+++ b/css/cv.css
@@ -36,7 +36,7 @@ ul li {
     line-height: 1.4em;
     color: #333;
 }
-.SkillsList h2 ul li {
+.SkillsList h1 h2 ul li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
